--- a/Applied_Data_Science.ipynb
+++ b/Applied_Data_Science.ipynb
@@ -1,8 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1> This Juptyter Notebook will be mainly used for the capstone project that involves predicting car accident severity based on the weather."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "print('Hello Capstone Project Course!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -15,24 +41,13 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import Numpy as np\n",
-    "print('Hello Capstone Project Course!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Read the excel data into a dataframe\n",
-    "car_df = ps.read_csv('Data-Collisions.csv')"
+    "car_df = pd.read_csv('Data-Collisions.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +259,7 @@
        "[5 rows x 38 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +281,7 @@
        "Name: ROADCOND, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
