--- a/Applied_Data_Science.ipynb
+++ b/Applied_Data_Science.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "source": [
     "<h1> Data </h1>\n",
-    "<h3>The geospatial dataset contains information regarding vehicle incidents recorded in Chattanooga, TN since 2018. Location information for incidents remains unchanged from the source data. Data is pulled from Chattanooga Police Department’s Records Management (CPD's RMS) system(<a href=\"https://www.chattadata.org/Public-Safety/Vehicle-Incidents/nvdi-c4tt?category=Public-Safety&view_name=Vehicle-Incidents%27\">(link here)</a>. </h3>\n",
+    "<h3>The geospatial dataset contains information regarding vehicle incidents recorded in Chattanooga, TN since 2018. Location information for incidents remains unchanged from the source data. Data is pulled from Chattanooga Police Department’s Records Management (CPD's RMS) system <a href=\"https://www.chattadata.org/Public-Safety/Vehicle-Incidents/nvdi-c4tt?category=Public-Safety&view_name=Vehicle-Incidents%27\">(link here)</a>. </h3>\n",
     "<h3>The dataset has 30 columns and 38,016 rows. It contains mostly categorical data such as weather and lighting description of when the accident took place along with the accident severity and collision type (rear to rear, sideswipe, etc.). So I will use data such as weather description, road lighting, time of day, and day of week to train a machine learning algorithm to predict the potential severity of an accident in Chattanooga given that days weather conditions and time.</h3>\n",
     "\n"
    ]
