--- a/Applied_Data_Science.ipynb
+++ b/Applied_Data_Science.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "source": [
     "<h1>Introduction/Business Problem</h1>\n",
-    "<h3>There is risk involved every time we get behind the wheel of a vehicle. However, factors such as the weather and road conditions can significantly increase that risk. The problem we aim to solve  involves predicting the possibility of getting into a car accident and how severe it would be given the weather and road conditions in Chattanooga, TN. This knowledge could help Chattanooga drivers know when to be more cautious driving around town or even reschedule their travel plans.</h3> \n"
+    "<h3>There is risk involved every time we get behind the wheel of a vehicle. However, factors such as the weather and road conditions can significantly increase that risk. The problem we aim to solve involves predicting the possibility of getting into a car accident and how severe it would be given the weather and road conditions in Chattanooga, TN. The target audience and who would care about this problem are Chattanooga drivers,who would know when to be more cautious driving around town or even reschedule their travel plans thanks to the model.</h3> \n"
    ]
   },
   {
